--- a/package.json
+++ b/package.json
@@ -13,8 +13,5 @@
         "eslint-plugin-vue": "^9.27.0",
         "prettier": "^3.3.3"
     },
-    "dependencies": {
-        "@nylas/web-elements": "^1.1.1",
-        "@vueuse/core": "^11.0.3"
-    }
+    "dependencies": {}
 }
